fix iOS gape bug

--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -49,7 +49,8 @@ in 	(#D85336, first),
 #sticky {
 	position: fixed;
 	width: 100%;
-	top: 0;
+	padding-top: 100px;
+	top: -100px;
 	z-index: 3;
 	text-align: center;
 	backface-visibility: hidden;
